# sibsutis-labs

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  lab9.out.txt  test.cpp
appmath/final/: final.py
appmath/lab1/: lab1.py
appmath/lab2/: .lab2.py.swp  lab2.py
appmath/lab3/: lab3.py
appmath/lab4/: lab4.py
appmath/lab5/: lab5.py
arch/: .gitignore  CMakeLists.txt  char.c  char.h  fact.sa  font2  genchar.c  main.c  main.cpp  readme.md  units.c
arch-cluster/: Makefile  matrix2.cpp  test.sh
arch/lab/: genc.c  lab1.c  lab2.c  lab3.c  lab4.c  lab5.c
arch/lib/: big_chars.c  big_chars.h  char.h  command.c  command.h  errors.h  keys.c  keys.h  log.c  log.h  memory.c  memory.h  memory.h.gch  registers.c  registers.h  term.c  term.h  ui.c  ui.h  units.c  units.h
arch/utils/: arch.c  genc.c  sac.c  sbc.c
avmo/: lab1.js  lab2.js  lab2.md  lab3.js  package-lock.json  package.json  simplex.js  test.js
databases/: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  semantic.json
databases/app/: composer.json  package-lock.json  package.json  semantic.json
databases/migrations/: data.sql
databases/reports/: report.odt
databases/scripts/: bootstrap.php
databases/templates/: index.html
databases/www/: page.js  page.php
discrete_mathematics/dm1/: dm1.cpp
discrete_mathematics/dm3/: dm3.cpp
dm1/: dm1.cpp
dm3/: .dm3.cpp.swn  .dm3.cpp.swo  .dm3.cpp.swp
funcprog/: a.pl  db.txt  lab12.lisp  lab2.pl
gpu/labs/: README.md  execute_cuda.sh  lab2-openmp.c  lab2.c  lab4.cu  lab7.cu  lab8.cu  plot3d.py
lab1/: README.md
lab10/: app.h  lab10.cpp
lab10/app/: file.h  man.h
lab2/: lab2.cpp
lab3/: lab32.cpp  lab33.cpp
lab4/: lab4.cpp
lab5/: lab5.cpp
lab6/: .lab6.cpp.swp  lab6.cpp
lab8/: lab8.cpp
lab9/: .lab9.cpp.swp  lab9.cpp
matstat/: task4.php  task6.php  task7.php
networks/: README.md  conf1.txt  lab2.pkt  lab4.pkt  lab5.pkt  lab7.pkt  sw0.txt
networks/cisco-packet-tracer/: conf2.txt  lab1.pkt
networks/http-server/: CMakeLists.txt  README.md  constants.hpp  helpers.hpp  main.cpp  types.hpp
networks/http-server/helpers/: file.hpp  http.hpp  logger.hpp
networks/http-server/helpers/http/: server_info.cpp  server_info.hpp
networks/http-server/web-root/: about.html  index.html  test.txt
networks/labs/lab3-boost/: CMakeLists.txt  client  client.cpp  server  server-async  server-async.cpp  server-sync.cpp  server.cpp
networks/labs/lab3-boost/src/: types.hpp
networks/labs/lab3-boost/src/helpers/: arguments.hpp
os/: LAB1.PAS  LAB2.PAS
practics/: Makefile  a.out  hexsummator.cpp  hexsummator.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  practics.pro  test.cpp
programming/: lab9.in.txt
programming/lab1/: lab1.cpp
programming/lab10/: app.h  lab10.cpp
programming/lab2/: lab22.cpp
programming/lab3/: lab31.cpp  lab32.cpp
programming/lab4/: lab4.cpp
programming/lab6/: lab6.cpp
programming/lab7/: lab7.cpp
programming/lab8/: lab8.cpp
programming/lab9/: lab9.cpp
sapd/: a.out  array.h  bubble.hpp  heapsort.hpp  list.hpp  merge.hpp  merge_t.hpp  quicksort.hpp  report.hpp  shaker.hpp  shell.hpp  straight.hpp  tree.hpp
sapd/lab1/: README.md  lab1.cpp
sapd/lab2/: README.md  lab2.cpp
sapd/lab21/: README.md  lab21.cpp
sapd/lab3/: README.md  lab3.cpp
sapd/lab4/: lab4.cpp
sapd/lab5/: README.md  lab5.cpp
sapd/lab6/: README.md  lab6.cpp
sapd/sapd22/: README.md
sapd/sapd23/: README.md
sapd/sapd24/: README.md
sapd/sapd25/: README.md
tplmt/: lab1.js  lab2.js  lab3-rules.json  lab3.js  package-lock.json  package.json
tsvpis/: README.md  backpack-unlimited.py  backpack.py  bfs.js  braces.js  bubblesort.js  deikstra.js  ford-bellman.js  frog.js  init.js  mergerecursort.js  mergesort.js  mergestats.js  package.json  qrasqal.js  result.js  selectsort.js  stats.js  test.js  vertex.js
visual/: README.md  app.js  clients  database.js  films  index.html  package-lock.json  package.json
visual-qt/: Di.cpp  Di.h  Makefile  Makefile.Debug  Makefile.Release  SqlQuery.h  adminmainwindow.cpp  adminmainwindow.h  adminmainwindow.ui  course  course.pro  editfilm.cpp  editfilm.h  editfilm.ui  exceptions.cpp  exceptions.h  film.cpp  film.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  magic.h  main.cpp  mainwindow.h  mainwindow.ui  moc_adminmainwindow.cpp  moc_editfilm.cpp  moc_loginwindow.cpp  moc_usermainwindow.cpp  object_script.course.Debug  object_script.course.Release  project.sqlite  testscreen.cpp  testscreen.h  testscreenwindow.cpp  testscreenwindow.h  testscreenwindow.ui  ui_adminmainwindow.h  ui_editfilm.h  ui_loginwindow.h  (+8 more)
(+78 files in other folders)
